--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.1",
     "connected-react-router": "^6.9.1",
     "cors": "^2.8.5",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
+    "mysql2": "^2.2.5",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
@@ -22,6 +24,7 @@
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-intl": "^5.20.2",
+    "react-markdown-editor-lite": "^1.3.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -35,6 +38,7 @@
     "redux-persist": "^5.10.0",
     "redux-state-sync": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "sequelize": "^6.6.2",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.3.2"
   },
